# utils/middleware.js
@@ -11,11 +11,7 @@ const cwagSecurity = (req, res, next) => {
         stylePrice: "required|string|max:3",
         styleDetails: "required|string",
         quantiy: "required|integer",
-        customerOrderStatus: "required|string",
-        customerOrderQuantity: "required|integer",
-        customerAddress: "required|string|min:3|max:300",
-        customerEmail: "required|string",
-        customerOrderDate: "required|string"
+        
 
     }
     validator(req.body, validationRule, {}, (err, status) => {
@@ -32,6 +28,31 @@ const cwagSecurity = (req, res, next) => {
     });
 }
 
+
+const customerSecurity = (req, res, next) => {
+    const validation = {
+        customerOrderStatus: "required|string",
+        customerOrderQuantity: "required|integer",
+        customerAddress: "required|string|min:3|max:300",
+        customerEmail: "required|string",
+        customerOrderDate: "required|string"
+
+    }
+    validator(req.body, validation, {}, (err, status) => {
+        if (!status) {
+            res.status(412)
+                .send({
+                    success: false,
+                    message: 'Validation failed',
+                    data: err
+                });
+        } else {
+            next();
+        }
+    });
+}
+
 module.exports = { 
-    cwagSecurity
+    cwagSecurity,
+    customerSecurity
 }
